# gwbot

./: .gitignore  CLAUDE.md  pyproject.toml
src/: agent.py  app.py  app.tcss  init.py  main.py  models.py  scheduler.py  tools.py  widgets.py
src/memory/: __init__.py  background.py  embeddings.py
src/prompts/: __init__.py  memory.py  system.py
src/tools/: __init__.py  bash.py  editor.py  memory.py  monarch.py  notify.py  scheduler.py  web.py
tests/: test_conversation_search.py  test_notify.py  test_web_tools.py
